syntax = "proto3";

package helloworld;

option go_package = "/proto";

service Greeter {
	rpc SayHello(HelloRequest) returns (HelloReply) {};
}

message HelloRequest {
	string request = 1;
}

message HelloReply {
	string message = 1;
}

service MachineGreeter {
	rpc SayList(HelloRequest) returns (stream HelloReply) {};
}

service ReverseMachineGreeter {
	rpc SayRecord(stream HelloRequest) returns (HelloReply) {};
}

service BidirectionalGreeter {
	rpc SayRoute(stream HelloRequest) returns (stream HelloReply) {};
}
